--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-logger-trace",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "NestJS Logger Trace",
   "author": "Álvaro Oliveira",
   "main": "dist/index.js",
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/algab/nestjs-logger-trace"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
@@ -39,6 +39,7 @@
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "winston": "^3.11.0"
   }
 }
