--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nestjs-logger-trace",
+  "name": "nestjs-logger-span",
   "version": "0.1.0",
-  "description": "NestJS Logger Trace",
+  "description": "NestJS Logger Span",
   "author": "Álvaro Oliveira",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/algab/nestjs-logger-trace"
+    "url": "https://github.com/algab/nestjs-logger-span"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
